Tue Dec 22 15:55:39 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_button_press): 
	Return TRUE for button press events we handle.
	(Allows option menus in radio buttons to work...)

Tue Dec 22 14:50:25 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_find_widget): Optimization -
	when we've already found a widget, skip all checks
	for subsequent children.

	* gtk/gtkdnd.c (gtk_drag_find_widget): Checked for
	!MAPPED, not !VISIBLE, since a widget (like a notebook
	page), can be VISIBLE, but !REALIZED or !MAPPED.

	* gtk/gtkdnd.c (gtk_drag_find_widget): Use forall(),
	not foreach().

Mon Dec 21 22:01:49 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_motion): fixed column resize bug

Sun Dec 20 04:48:59 1998  Tim Janik  <timj@gtk.org>

	* gdk/gdk.h (GDK_PRIORITY_EVENTS): export the priority at which
	events are processed.

	* gtk/gtk[main|signal|container].[ch]: removed deprecated _interp
	variants: gtk_container_foreach_interp, gtk_idle_add_interp,
 	gtk_timeout_add_interp, gtk_signal_connect_interp.

Sat Dec 19 18:45:30 PST 1998 Shawn T. Amundson <amundson@gtk.org>

	* configure.in: added sv to ALL_LIGNUAS

Sat Dec 19 22:49:40 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.c (gtk_type_query): eek, fixed an embarrasing bug
	that caused this function to always return NULL (noticed by marius
 	vollmer).

Sat Dec 19 17:28:30 1998  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Don't add the gthread libs to 
	GLIB_LIBS either, or -lgthread -lpthread will get 
	pulled into all applications because of shlib deps.

	* gtk/gtkmain.h gtk/gtkwidget.c gtk/gtk gdk/gdk: 
	Use GLIB's priority #define. Revise scale of 
	priorities.

Sat Dec 19 03:44:29 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkmain.c: always run a g_main_iteration, even if
	there are no active main loops. This fixes the gimp splash
	screen.

Sat Dec 19 05:37:51 1998  Tim Janik  <timj@gtk.org>
